pythonwcmmerce/pub/log/exceptions.log
2020/12/27 15:02:12 : Traceback (most recent call last):
  File "/var/www/python/cartmigration/controllers/migration.py", line 348, in setup_cart
    setup_source = self.setup_source(data)
  File "/var/www/python/cartmigration/controllers/migration.py", line 284, in setup_source
    getattr(self.get_target_cart(), 'set_notice')(self._notice)
  File "/var/www/python/cartmigration/libs/base_controller.py", line 115, in get_target_cart
    self.target_cart = get_model(cart_name)
  File "/var/www/python/cartmigration/libs/utils.py", line 97, in get_model
    module_class = importlib.import_module(model_name)
  File "/usr/local/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/var/www/python/cartmigration/models/cart/woocommerce.py", line 4432
    return response_success()
    ^
SyntaxError: 'return' outside function

2020/12/27 15:04:05 : Traceback (most recent call last):
  File "/var/www/python/cartmigration/controllers/migration.py", line 348, in setup_cart
    setup_source = self.setup_source(data)
  File "/var/www/python/cartmigration/controllers/migration.py", line 284, in setup_source
    getattr(self.get_target_cart(), 'set_notice')(self._notice)
  File "/var/www/python/cartmigration/libs/base_controller.py", line 115, in get_target_cart
    self.target_cart = get_model(cart_name)
  File "/var/www/python/cartmigration/libs/utils.py", line 97, in get_model
    module_class = importlib.import_module(model_name)
  File "/usr/local/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/var/www/python/cartmigration/models/cart/woocommerce.py", line 4432
    return response_success()
    ^
SyntaxError: 'return' outside function

2020/12/28 03:11:42 : Traceback (most recent call last):
  File "/var/www/python/cartmigration/controllers/migration.py", line 348, in setup_cart
    setup_source = self.setup_source(data)
  File "/var/www/python/cartmigration/controllers/migration.py", line 284, in setup_source
    getattr(self.get_target_cart(), 'set_notice')(self._notice)
  File "/var/www/python/cartmigration/libs/base_controller.py", line 115, in get_target_cart
    self.target_cart = get_model(cart_name)
  File "/var/www/python/cartmigration/libs/utils.py", line 97, in get_model
    module_class = importlib.import_module(model_name)
  File "/usr/local/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/var/www/python/cartmigration/models/cart/woocommerce.py", line 3535
    'term_taxonomy_id': category_id if category_id 1,
                                                   ^
SyntaxError: invalid syntax

2020/12/29 16:05:26 : Traceback (most recent call last):
  File "/var/www/python/cartmigration/models/basecart.py", line 1319, in gzinflate
    compressed_data = base64.b64decode(base64_string)
  File "/usr/local/lib/python3.7/base64.py", line 87, in b64decode
    return binascii.a2b_base64(s)
binascii.Error: Invalid base64-encoded string: number of data characters (25) cannot be 1 more than a multiple of 4

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/var/www/python/cartmigration/models/basecart.py", line 1323, in gzinflate
    compressed_data = base64.b64decode(base64_string)
  File "/usr/local/lib/python3.7/base64.py", line 87, in b64decode
    return binascii.a2b_base64(s)
binascii.Error: Invalid base64-encoded string: number of data characters (25) cannot be 1 more than a multiple of 4

2020/12/29 16:05:51 : Traceback (most recent call last):
  File "/var/www/python/cartmigration/models/basecart.py", line 1319, in gzinflate
    compressed_data = base64.b64decode(base64_string)
  File "/usr/local/lib/python3.7/base64.py", line 87, in b64decode
    return binascii.a2b_base64(s)
binascii.Error: Invalid base64-encoded string: number of data characters (25) cannot be 1 more than a multiple of 4

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/var/www/python/cartmigration/models/basecart.py", line 1323, in gzinflate
    compressed_data = base64.b64decode(base64_string)
  File "/usr/local/lib/python3.7/base64.py", line 87, in b64decode
    return binascii.a2b_base64(s)
binascii.Error: Invalid base64-encoded string: number of data characters (25) cannot be 1 more than a multiple of 4

2020/12/29 16:05:51 : {"result": "decode", "msg": "", "data": null}
